--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,107 @@
 * {
     font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none;
+}
+
+body {
+    background-color: #8A51FC;
+}
+
+.logo {
+    width: 300px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+main {
+    width: 375px;
+    background: #F4F4F4;
+    border-radius: 20px;
+    margin: 0 auto;
+    padding: 44px 24px 23px;
+    margin-top: 25px;
+}
+
+label {
+    color: #555555;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+select,
+input {
+    border-radius: 4px;
+    border: 1px solid #BBB;
+    background: #FFF;
+    height: 48px;
+    width: 100%;
+    margin-bottom: 24px;
+    padding-left: 18px;
+    font-weight: 200px;
+    font-size: 16px;
+    font-weight: 700;
+    color: #555555;
+
+}
+
+button {
+    background-color: #772FD3;
+    width: 100%;
+    height: 48px;
+    border: none;
+    color: #FFFF;
+    font-weight: 700;
+    font-size: 18px;
+    border-radius: 7px;
+    margin-bottom: 36px;
+    cursor: pointer;
+
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+button:active {
+    opacity: 0.6;
+}
+
+section {
+    border-radius: 20px;
+    border: 1px solid #772FD3;
+    padding: 13px;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+}
+
+.currency-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+
+}
+
+.arrow-img {
+    margin: 15px 0;
+}
+
+.currency-text {
+    font-size: 14px;
+    font-weight: 400;
+    color: #777777;
+
+}
+
+.currency-value {
+    font-size: 20px;
+    font-weight: 700;
+    color: #555555;
+
 }
