--- a/styles.css
+++ b/styles.css
@@ -8,29 +8,39 @@
 
 body {
     background-color: #8A51FC; /* Mudo o fundo da tela */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    gap: 30px;
+
 }
 
 .logo {
     width: 300px;
     margin-top: 50px;
-    margin-left: auto; /*colocar em auto */
-    margin-right: auto; /*colocar em auto */
-    display: block; /* quando margins estiverem auto, e colocar display block fica centralizado */
+
+    /*margin-left: auto; /*colocar em auto */
+    /*margin-right: auto; /*colocar em auto */
+    /*display: block; /* quando margins estiverem auto, e colocar display block fica centralizado */
 }
 
 main {
     width: 375px;
     background: #F4F4F4;
     border-radius: 20px;
-    margin: 0 auto;
-    padding: 44px 24px 23px;
-    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    padding: 25px;
+  
 }
 
 label {
     color: #555555;
     font-weight: 700;
     font-size: 16px;
+    display: flex;
+    flex-direction: inherit;
 }
 
 select,
